--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -33,11 +33,12 @@ We focus here on the \glspl{DW} that are present in ferroelectric materials.
 
 % Together with the inherent difference between \glspl{DW} and domains, this has indeed led to a great deal of research interest, both from the fundamental and technological point of view.
 Another interesting observation is that, even though \glspl{DW} occupy only a fraction of the entire volume, they can lead to the biggest contributions to macroscopic effects \cite{Schranz2012}. 
-Indeed, most of the research into \glspl{DW} was originally focused on their dynamics, since switching in ferroelectric materials is mainly a result of \gls{DW} movement \cite{Merz1954,Gao2013}.
-This can be understood from the following energetic argument.
-When an external electric field is applied to the sample, it is more favorable for the \glspl{DW} to move in order to grow the favored domains\footnote{Domains with the polarization along the electric field.}, rather than uniformly rotating the polarization in the domain as a whole.
+Indeed, most of the research into \glspl{DW} was originally focused on their dynamics, since switching in ferroelectric materials is mainly a result of domain nucleation and associated \gls{DW} movement \cite{Merz1954,Gao2013}. This is termed as {\it extrinsic} switching since it depends on the morphology of the sample, i.e. domain and \gls{DW} distribution, rather than the microscopics and properties of individual unit cells \cite{Kliem2005}.
+The reason why extrinsic switching is usually favored can be understood from the following energetic argument.
+When an external electric field is applied to the sample, it is energetically more favorable for the \glspl{DW} to move in order to grow the favored domains\footnote{Domains with the polarization along the electric field.}, rather than to uniformly rotate the polarization in the domain as a whole.
 The latter requires overcoming the prohibitively large energy barrier that separates different orientations of the polarization \cite{Tagantsev2010}.
-This relatively low energy cost associated with the \gls{DW} movement will also turn out to be one of the main contributors to the main subject of this Chapter: the mechanical softening at purely ferroelectric \glspl{DW}.
+This uniform rotation is called {\it intrinsic} switching, since it can be described by the microscopics of a single unit cell, i.e. only depends on the properties of the material, and does not depend on the sample's domain and \gls{DW} pattern \cite{Kliem2005}. 
+This relatively low energy cost associated with the \gls{DW} movement will also turn out to be one of the main contributors to the subject of this Chapter: the mechanical softening at purely ferroelectric, non-ferroelastic \glspl{DW}.
 
 Because of the scaling down of technological devices into the nanoscale realm, the focus has more and more shifted towards the \glspl{DW} themselves as the subject of study, rather than just as being the boundaries between domains.
 The physics that govern the region of the \gls{DW} is usually richer than that of the domains. One of the reasons is that, as we mentioned before, the \gls{OP} is locally forced away from the energetic minimum.
@@ -66,7 +67,7 @@ Its contribution to the free energy density can be written as:
 	f_{q}=-q_{ijkl}\varepsilon_{ij}P_{k}P_{l},
 \end{equation}
 where $q_{ijkl}$ denotes the strength of the coupling, the indices $i, j, k, l$ again iterate through $x, y, z$, and Einstein summation over repeated indices is implied.
-The longitudinal part, $q_{iiii} \varepsilon_{ii} (P_i)^2$, usually leads to the largest contribution to the strain, causing a tensile strain ($\varepsilon_{ii}>0$) and a stretching of the material along $P_i$~\cite{Marton2010}.
+The longitudinal part, $q_{iiii} \varepsilon_{ii} (P_i)^2$, usually leads to the largest contribution to the strain \cite{Li2014}, causing a tensile strain ($\varepsilon_{ii}>0$) and a stretching of the material along $P_i$~\cite{Marton2010}.
 
 Due to the high degree of symmetry in crystals, many equivalent orientations of $P$ are possible, each with an associated strain. The \glspl{DW} separating these are equally numerous and have a distinct strain texture due to the variation of $P$ across the \gls{DW}.
 
