--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -188,16 +188,16 @@ This brings me, finally, to my Mother and Father, whom I can not thank enough fo
 \tableofcontents
 \mainmatter
 \raggedbottom
-% \Include{Introduction}
-% \Include{Rashba}
-% \Include{GdMn2O5}
-% \Include{Cr}
+\Include{Introduction}
+\Include{Rashba}
+\Include{GdMn2O5}
+\Include{Cr}
 \Include{Softening}
-% \appendix
-% \Include{DFT}
-% \Include{Wannier}
-% \Include{FEM}
-% \Include{codes}
+\appendix
+\Include{DFT}
+\Include{Wannier}
+\Include{FEM}
+\Include{codes}
 \backmatter
 \printnoidxglossary[sort=use,type=\acronymtype]
 \bibliography{references}
