--- a/papers/references.bib
+++ b/papers/references.bib
@@ -1146,7 +1146,7 @@ year = {1999}
   Pages                    = {137203},
   Volume                   = {110},
   Year                     = {2013},
-  Doi                      = {10.1103/PhysRevLett.110.137203},
+  url                      = {https://dx.doi.org/10.1103/PhysRevLett.110.137203},
   Issue                    = {13}
 }
 
@@ -6933,5 +6933,33 @@ year = {2000}
 author = {Gorobtsov, Oleg and Ponet, Louis and et al.},
 title = {Femtosecond control of phonon dynamics near a magnetic order critical point},
 journal = {Nature Communications, under review}
+}
+
+@article{Kliem2005,
+abstract = {Mechanisms of extrinsic and intrinsic switching phenomena in ferroelectrics are explained and existing models are summarized. Then, criteria for an experimental distinction between both models are elaborated. Samples with thicknesses ranging from 2.7 to 63.8 nm prepared by a Langmuir-Blodgett technique were investigated with respect to these criteria. Measurements of their polarization switching behaviour, their polarization hysteresis loops, and their coercive fields were carried out. It is found that the coercive fields increase with decreasing sample thickness. Also, the switching time increases with decreasing sample thickness and it increases with decreasing field strength. The switching process turns out to be thermally activated. We find that neither intrinsic nor extrinsic models are sufficient to describe the experimental situation. {\textcopyright} 2005 IOP Publishing Ltd.},
+author = {Kliem, H. and Tadros-Morgane, R.},
+url = {https://dx.doi.org/10.1088/0022-3727/38/12/002},
+file = {:home/ponet/Downloads/Kliem{\_}2005{\_}J.{\_}Phys.{\_}D {\_}Appl.{\_}Phys.{\_}38{\_}1860.pdf:pdf},
+issn = {00223727},
+journal = {Journal of Physics D: Applied Physics},
+mendeley-groups = {PhD Thesis/Softening},
+number = {12},
+pages = {1860--1868},
+title = {{Extrinsic versus intrinsic ferroelectric switching: Experimental investigations using ultra-thin PVDF Langmuir-Blodgett films}},
+volume = {38},
+year = {2005}
+}
+@article{Li2014,
+abstract = {Electrostriction plays an important role in the electromechanical behavior of ferroelectrics and describes a phenomenon in dielectrics where the strain varies proportional to the square of the electric field/polarization. Perovskite ferroelectrics demonstrating high piezoelectric performance, including BaTiO3, Pb(Zr1-xTix)O3, and relaxor-PbTiO3 materials, have been widely used in various electromechanical devices. To improve the piezoelectric activity of these materials, efforts have been focused on the ferroelectric phase transition regions, including shift the composition to the morphotropic phase boundary or shift polymorphic phase transition to room temperature. However, there is not much room left to further enhance the piezoelectric response in perovskite solid solutions using this approach. With the purpose of exploring alternative approaches, the electrostrictive effect is systematically surveyed in this paper. Initially, the techniques for measuring the electrostrictive effect are given and compared. Second, the origin of electrostriction is discussed. Then, the relationship between the electrostriction and the microstructure and macroscopic properties is surveyed. The electrostrictive properties of ferroelectric materials are investigated with respect to temperature, composition, phase, and orientation. The relationship between electrostriction and piezoelectric activity is discussed in detail for perovskite ferroelectrics to achieve new possibilities for piezoelectric enhancement. Finally, future perspectives for electrostriction studies are proposed. {\textcopyright} 2014 AIP Publishing LLC.},
+author = {Li, Fei and Jin, Li and Xu, Zhuo and Zhang, Shujun},
+url = {https://dx.doi.org/10.1063/1.4861260},
+file = {:home/ponet/Downloads/1.4861260(2).pdf:pdf},
+issn = {19319401},
+journal = {Applied Physics Reviews},
+mendeley-groups = {PhD Thesis/Softening},
+number = {1},
+title = {{Electrostrictive effect in ferroelectrics: An alternative approach to improve piezoelectricity}},
+volume = {1},
+year = {2014}
 }
 
